2002-08-13  Stephane Carrez  <stcarrez@nerim.fr>

	* gas/m68hc11/all.exp: Run the new test.
	* gas/m68hc11/insns12.s: New file to test specific 68HC12 insns.
	* gas/m68hc11/insns12.d: New file.
	* gas/m68hc11/branchs12.s: New test.
	* gas/m68hc11/branchs12.d: New test.

	* gas/m68hc11/all_insns.d: Dump the relocs to verify that they
	are against symbols and not sections (for linker relaxation).
	* gas/m68hc11/insns-dwarf2.d: Likewise.
	* gas/m68hc11/insns.d: Likewise.
	* gas/m68hc11/lbranch.d: Likewise.
	* gas/m68hc11/lbranch-dwarf2.d: Likewise.
	* gas/m68hc11/opers12.d: Likewise.
	* gas/m68hc11/opers12-dwarf2.d: Likewise.

2002-08-12  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/elf-consthilo.[sd]: New test.
	* gas/mips/mips.exp: Run it.

2002-08-09  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* gas/mips/empic.d: Treat "addiu" and "daddiu" as equivalent when
	$0 is source.

2002-08-06  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/altivec_xcoff64.d: Adjust for aix5 target.
	* gas/ppc/booke_xcoff64.d: Likewise.  Also fix relocs.

2002-08-01  H.J. Lu <hjl@gnu.org>

	* gas/mips/elf-rel6.s: Add ".p2align 4".
	* gas/mips/elf-rel6.d: Check nop.

2002-08-01  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/elf-rel6.[sd]: New test.
	* gas/mips/mips.exp: Run it.

2002-07-29  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/elf_ase_mips16.d: New file to test ELF MIPS16 ASE marking.
	* gas/mips/elf_ase_mips16.s: Likewise.
	* gas/mips/mips.exp: Run the new test.

2002-07-26  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/altivec.d: Invoke "as" with "-a32".

2002-07-25  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/mips-gp32-fp64.d,
	* gas/mips/mips-gp32-fp64-pic.d: Add -mfp64.

2002-07-19  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/mmix/list-pseudoints.l: Adjust for changes in gas section
	padding.
	* gas/mmix/greg7.d: Ditto.
	* gas/mmix/greg8.d: Ditto.
	* gas/mmix/fb-2.d: Ditto.
	* gas/mmix/comment-1.d: Ditto.
	* gas/mmix/byte-1.d: Ditto.
