@@ -119,7 +119,7 @@ Contents of section \.text:
  0010 00000000 ffff0010 00000000 3f001104  .*
  0020 00000000 00001104 00000000 41000010  .*
  0030 00000000 00000010 00000000 0000033c  .*
- 0040 0c0063[26]4 0000033c 140163[26]4 d0ff0324  .*
+ 0040 0c0063[26]4 0000033c 140163[26]4 d0ff03[26]4  .*
  0050 00000000 00010000 04000000 28000000  .*
  0060 2c010000 d0ffffff 00000000 00000000  .*
  0070 00010000 00000000 04000000 00000000  .*
