@@ -119,7 +119,7 @@ Contents of section \.text:
  0010 00000000 1000ffff 00000000 0411003f  .*
  0020 00000000 04110000 00000000 10000041  .*
  0030 00000000 10000000 00000000 3c030000  .*
- 0040 [26]463000c 3c030000 [26]4630114 2403ffd0  .*
+ 0040 [26]463000c 3c030000 [26]4630114 [26]403ffd0  .*
  0050 00000000 00000100 00000004 00000028  .*
  0060 0000012c ffffffd0 00000000 00000000  .*
  0070 00000000 00000100 00000000 00000004  .*
