@@ -1,3 +1,10 @@
+2002-08-14  H.J. Lu <hjl@gnu.org>
+
+	* gas/mips/elempic.d: Treat "addiu" and "daddiu" as equivalent
+	when $0 is source.
+	* gas/mips/telempic.d: Likewise.
+	* gas/mips/telempic.d: Likewise.
+
 2002-08-13  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* gas/m68hc11/all.exp: Run the new test.
